spacing fix

--- a/components/home/DG/DG.module.scss
+++ b/components/home/DG/DG.module.scss
@@ -78,6 +78,16 @@
       .image {
         height: 270px;
       }
+      .image_mobile {
+        height: 270px;
+      }
+    }
+
+    .image_mobile {
+      height: 400px;
+      margin-left: 0;
+      margin-top: 40px;
+      margin-bottom: -60px;
     }
   }
 
